preprod-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: preprod-ing
  namespace: preprod
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: preprod
            port:
              number: 84
        path: /
        pathType: Exact
status:
  loadBalancer: {}
